<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:id="@+id/linear_layout"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="app.rishabh.firebase.activities.LoginActivity">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">


            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/d_16dp"
                android:layout_weight="0.25"
                android:text="@string/sign_in"
                android:textColor="@color/c_text_grey"
                android:textSize="@dimen/d_26sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/d_30dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingTop="@dimen/d_4dp"
                    android:textColor="@color/c_text_grey"
                    android:textColorHint="@android:color/black"
                    android:translationY="1dp" />
            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/d_15dp"
                android:layout_marginTop="@dimen/d_10dp"
                android:background="@color/c_view_light_grey" />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                app:passwordToggleEnabled="true"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/d_30dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingTop="@dimen/d_4dp"
                    android:textColor="@color/c_text_grey"
                    android:textColorHint="@android:color/black"
                    android:translationY="1dp" />
            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/d_15dp"
                android:layout_marginTop="@dimen/d_10dp"
                android:background="@color/c_view_light_grey" />
            <TextView
                android:id="@+id/tv_forgot_password"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="5dp"
                android:text="@string/forget_passwd"
                android:textColor="@color/c_text_grey" />

            <Button
                android:textColor="@android:color/white"
                android:background="@drawable/button"
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="@dimen/d_120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/sign_in"
                android:textStyle="bold" />

            <View
                android:layout_width="200dp"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="@color/c_view_light_grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/register" />

            <TextView
                android:id="@+id/tv_create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:onClick="SignUp"
                android:text="@string/create_account"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:visibility="gone"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>
