<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="app.rishabh.firebase.activities.SignUpActivity">

    <ScrollView
        android:id="@+id/scrollView_signup"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/activity_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/tv_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginBottom="16dp"
                    android:text="@string/Signup"
                    android:textColor="@color/c_text_grey"
                    android:textSize="@dimen/d_26sp" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/d_30dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingTop="@dimen/d_4dp"
                    android:textColor="@color/c_text_grey"
                    android:textColorHint="@android:color/black"
                    android:translationY="1dp" />
            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/d_15dp"
                android:layout_marginTop="@dimen/d_10dp"
                android:background="@color/c_view_light_grey" />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                app:passwordToggleEnabled="true"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/d_30dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingTop="@dimen/d_4dp"
                    android:textColor="@color/c_text_grey"
                    android:textColorHint="@android:color/black"
                    android:translationY="1dp" />
            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/d_15dp"
                android:layout_marginTop="@dimen/d_10dp"
                android:background="@color/c_view_light_grey" />

            <Button
                android:textColor="@android:color/white"
                android:background="@drawable/button"
                android:id="@+id/btn_sign_up"
                style="?android:textAppearanceSmall"
                android:layout_width="@dimen/d_120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/Signup"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_already_registered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:onClick="Login"
                android:text="@string/already_registered"
                android:textColor="@color/colorAccent" />


        </LinearLayout>

    </ScrollView>


</RelativeLayout>
